--- a/css/index.css
+++ b/css/index.css
@@ -40,14 +40,17 @@ body{
   height: 0.15rem;
   border-radius: 50%;
   position: absolute;
-  bottom:0;
-  right:0;
+  left:35px;
+  top:35px;
   background-color: #f5f254;
   background: url(../images/red.png);
   background-size: cover;
   z-index: 1000;
 }
 .avatar img {
+  position: absolute;
+  bottom:0;
+  right:0;
   width: 0.49rem;
   height: 0.49rem;
   border-radius: 50%;
