--- a/css/index.css
+++ b/css/index.css
@@ -74,6 +74,7 @@ body{
   background-size: cover;
 }
 .name{
+   color:#333333;
    flex: 1;
    height: 0.25rem;
 }
@@ -82,6 +83,7 @@ body{
   height: 0.14rem;
 }
 .time{
+  color: #8a8a8a;
   height: 0.25rem;
   flex: 1;
   font-size: 0.1rem;
